[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.15", features = ["derive"] }
derive-getters = "0.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["serde_json"] }
serde = { version = "1.0.207", features = ["serde_derive"] }
serde_json = "1.0.124"
sha2 = { version = "0.10.8", features = ["sha2-asm"] }
sha256 = "1.5.0"
tokio = { version = "1.39.2", features = ["full"] }
